--- a/charts/pisa-controller/crds/core.database-mesh.io_databasechaos.yaml
+++ b/charts/pisa-controller/crds/core.database-mesh.io_databasechaos.yaml
@@ -1,19 +1,3 @@
-##
-## Copyright 2022 SphereEx Authors
-##
-## Licensed under the Apache License, Version 2.0 (the "License");
-## you may not use this file except in compliance with the License.
-## You may obtain a copy of the License at
-##
-## http://www.apache.org/licenses/LICENSE-2.0
-##
-## Unless required by applicable law or agreed to in writing, software
-## distributed under the License is distributed on an "AS IS" BASIS,
-## WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-## See the License for the specific language governing permissions and
-## limitations under the License.
-##
-
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
@@ -28,10 +12,16 @@ spec:
     kind: DatabaseChaos
     listKind: DatabaseChaosList
     plural: databasechaos
+    shortNames:
+    - dbchaos
     singular: databasechaos
   scope: Namespaced
   versions:
-  - name: v1alpha1
+  - additionalPrinterColumns:
+    - jsonPath: .spec.schedule
+      name: Schedule
+      type: string
+    name: v1alpha1
     schema:
       openAPIV3Schema:
         properties:
@@ -106,7 +96,6 @@ spec:
             - action
             - schedule
             - selector
-            - suspend
             type: object
           status:
             properties:
@@ -120,7 +109,6 @@ spec:
                     type:
                       type: string
                   required:
-                  - reason
                   - status
                   - type
                   type: object
@@ -153,3 +141,5 @@ spec:
         type: object
     served: true
     storage: true
+    subresources:
+      status: {}
