--- a/charts/pisa-controller/crds/core.database-mesh.io_datashards.yaml
+++ b/charts/pisa-controller/crds/core.database-mesh.io_datashards.yaml
@@ -1,20 +1,3 @@
-##
-## Copyright 2022 SphereEx Authors
-##
-## Licensed under the Apache License, Version 2.0 (the "License");
-## you may not use this file except in compliance with the License.
-## You may obtain a copy of the License at
-##
-## http://www.apache.org/licenses/LICENSE-2.0
-##
-## Unless required by applicable law or agreed to in writing, software
-## distributed under the License is distributed on an "AS IS" BASIS,
-## WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-## See the License for the specific language governing permissions and
-## limitations under the License.
-##
-
-
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
@@ -29,6 +12,8 @@ spec:
     kind: DataShard
     listKind: DataShardList
     plural: datashards
+    shortNames:
+    - ds
     singular: datashard
   scope: Namespaced
   versions:
@@ -159,7 +144,6 @@ spec:
                       - tableShardingColumn
                       type: object
                   required:
-                  - actualDatanodes
                   - tableName
                   type: object
                 type: array
@@ -171,3 +155,5 @@ spec:
         type: object
     served: true
     storage: true
+    subresources:
+      status: {}
