--- a/charts/pisa-controller/crds/core.database-mesh.io_trafficstrategies.yaml
+++ b/charts/pisa-controller/crds/core.database-mesh.io_trafficstrategies.yaml
@@ -1,20 +1,3 @@
-##
-## Copyright 2022 SphereEx Authors
-##
-## Licensed under the Apache License, Version 2.0 (the "License");
-## you may not use this file except in compliance with the License.
-## You may obtain a copy of the License at
-##
-## http://www.apache.org/licenses/LICENSE-2.0
-##
-## Unless required by applicable law or agreed to in writing, software
-## distributed under the License is distributed on an "AS IS" BASIS,
-## WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-## See the License for the specific language governing permissions and
-## limitations under the License.
-##
-
-
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
@@ -29,6 +12,8 @@ spec:
     kind: TrafficStrategy
     listKind: TrafficStrategyList
     plural: trafficstrategies
+    shortNames:
+    - ts
     singular: trafficstrategy
   scope: Namespaced
   versions:
@@ -197,12 +182,8 @@ spec:
                                   user:
                                     type: string
                                 required:
-                                - connectionProbe
                                 - monitorInterval
                                 - password
-                                - pingProbe
-                                - readOnlyProbe
-                                - replicationLagProbe
                                 - user
                                 type: object
                             type: object
@@ -270,9 +251,6 @@ spec:
                               type: object
                             type: array
                         type: object
-                    required:
-                    - dynamic
-                    - static
                     type: object
                   simpleLoadBalance:
                     description: 'SimpleLoadBalance support load balancing type: 1.
@@ -333,11 +311,11 @@ spec:
                       are ANDed.
                     type: object
                 type: object
-            required:
-            - selector
             type: object
           status:
             type: object
         type: object
     served: true
     storage: true
+    subresources:
+      status: {}
