fix(ci): fix docker build faield since use rust nightly version
Signed-off-by: xuanyuan300 <xuanyuan300@gmail.com>

--- a/pisa-proxy/hack/Dockerfile
+++ b/pisa-proxy/hack/Dockerfile
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-FROM rust:1.60.0-slim-buster as builder
+FROM rustlang/rust:nightly-buster-slim as builder
 RUN apt-get update && apt-get  -y  install gcc openssl libssl-dev pkg-config
 WORKDIR /workspace
 COPY pisa-proxy /workspace
