--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -44,7 +44,7 @@ jobs:
       - name: "checkout codes"
         uses: actions/checkout@v2
       - name: "prepare rs toolchain" 
-        uses: dtolnay/rust-toolchain@nightly-2022-12-15
+        uses: dtolnay/rust-toolchain@nightly
       - uses: actions-rs/cargo@v1
         with:
           command: test 
