--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -44,9 +44,7 @@ jobs:
       - name: "checkout codes"
         uses: actions/checkout@v2
       - name: "prepare rs toolchain" 
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
+        uses: dtolnay/rust-toolchain@nightly
       - uses: actions-rs/cargo@v1
         with:
           command: test 
