--- a/pisa-proxy/version/Cargo.toml
+++ b/pisa-proxy/version/Cargo.toml
@@ -4,3 +4,5 @@ version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[build-dependencies]
+vergen = { version = "8.0.0-beta.3", features =  ["build", "git", "gitcl", "rustc"] }
