--- a/pisa-proxy/proxy/pool/Cargo.toml
+++ b/pisa-proxy/proxy/pool/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 async-trait = "0.1"
 crossbeam-queue = "0.3.5"
 dashmap = "5.3.4"
+tokio = { version = "1", default-features = false, features = ["time"]}
 tokio-stream = { version = "0.1" }
 futures = "0.3.21"
 tracing = "0.1.13"
